--- a/portfolio/public/style.css
+++ b/portfolio/public/style.css
@@ -17,6 +17,28 @@ body{
     
 }
 
-h1{
+.countdown-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+}
+
+.countdown-inner{
+   
+    min-width: 5vw;
+    min-height: 6vh;
+    text-align: center;
+}
+
+.time{
+    border-radius: 20px;
+    background-color: #31304D;
+    padding: 1rem;
+    text-align: center;
+}
+
+h1 , h2 , p{
     color: #F0ECE5;
 }
