--- a/portfolio/public/style.css
+++ b/portfolio/public/style.css
@@ -3,8 +3,8 @@
 
 
 :root {
-    --primary-color: #3498db; /* Declare a CSS variable for the primary color */
-    --background-color: #f1f1f1; /* Declare a CSS variable for the background color */
+    --primary-color: #F0ECE5; /* Declare a CSS variable for the primary color */
+    --background-color: #161A30; /* Declare a CSS variable for the background color */
   }
 
 
@@ -94,6 +94,7 @@ h1 , h2 , p{
 
 .welcome-section h1{
     padding: 0;
+    font-family:'Barlow';
 }
 
 .profile-section{
@@ -110,6 +111,7 @@ h1 , h2 , p{
   }
   
   .profile-pic {
+    border: 3px solid var(--primary-color);
     width: 20rem; /* Adjust as needed */
     height: 20rem; /* Adjust as needed */
     border-radius: 50%;
@@ -117,11 +119,18 @@ h1 , h2 , p{
   }
   
   .right-section {
-    margin-left: 10px;
+    background-color: rgba(0, 0, 0, 0.141);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
     width: 30vw;
     padding: 10px;
-    
   }
+
+.right-section p{
+  font-size: 20px;
+  text-wrap: pretty ;
+}
 
 
   .nav-container {
@@ -149,7 +158,7 @@ h1 , h2 , p{
   
   .theme-toggle button {
     background-color: var(--background-color); 
-    border-radius: 5px;
+    border: none;
     padding: 8px 16px;
     cursor: pointer;
   }
