--- a/portfolio/public/style.css
+++ b/portfolio/public/style.css
@@ -28,6 +28,7 @@ body{
     display: flex;
     flex-direction:row;
    align-items: center;
+   justify-content: center;
     padding: 100px;
 }
 
@@ -72,7 +73,7 @@ body{
     text-align: center;
 }
 
-h1 , h2 , p{
+h1 , h2, h3 , p , li{
     color: var(--primary-color);
 }
 
@@ -162,4 +163,60 @@ h1 , h2 , p{
     padding: 8px 16px;
     cursor: pointer;
   }
+  .project-card {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+  }
   
+  .project-image {
+    width: 100%;
+    height: 200px; /* Adjust as needed */
+    object-fit: cover;
+  }
+  
+  .project-details {
+    padding: 16px;
+  }
+  
+  .project-title {
+    font-size: 1.5em;
+    margin-bottom: 8px;
+  }
+  
+  .project-description {
+    margin-bottom: 12px;
+  }
+  
+  .project-tech {
+    margin-bottom: 12px;
+  }
+  
+  .project-tech ul {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  .project-tech li {
+    margin-bottom: 4px;
+  }
+  
+  .github-link {
+    color: #3498db;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-block;
+    border: 1px solid #3498db;
+    padding: 8px 16px;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .github-link:hover {
+    background-color: #3498db;
+    color: #fff;
+  }
